<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:title="@string/Profile"
            android:id="@+id/sideMenuProfile"/>
        <item
            android:title="@string/UploadProduct"
            android:id="@+id/sideMenuUpload"/>
        <item
            android:title="@string/Edit_Product"
            android:id="@+id/sideMenuEdit"/>
        <item
            android:title="@string/Delete_Product"
            android:id="@+id/sideMenuDelete"/>
        <item
            android:title="@string/Order_Receive"
            android:id="@+id/sideMenuReceive"/>
        <item
            android:title="@string/Unpaid_Order"
            android:id="@+id/sideMenuUnpaid"/>
        <item
            android:title="@string/History"
            android:id="@+id/sideMenuHistory"/>


</menu>