<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawerFragment"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_building"
        android:layout_width="149dp"
        android:layout_height="129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/img" />
</RelativeLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/tvicnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/IC_number"
            android:textSize="18dp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etic"
        android:hint="@string/enter_number"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvEmail"
            android:text="@string/E_mail"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:hint="@string/enter_email"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvCompany"
            android:text="@string/Company_Reg_No"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etCompany"
            android:hint="@string/enter_number"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvCompanyname"
            android:text="@string/Company_name"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etCompanyname"
            android:hint="@string/enter_name"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvUsername"
            android:text="@string/Username"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:hint="@string/enter_name"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvAddress"
            android:text="@string/Address"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etAddress"
            android:hint="@string/enter_the_address"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvDescription"
            android:text="@string/Description"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etDescription"
            android:hint="@string/check"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvBusiness"
            android:text="@string/Business_hour"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etBusiness"
            android:hint="@string/Hours"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tvContactNo"
            android:text="@string/Contact_No"
            android:textSize="18dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etContactNo"
            android:hint="@string/enter_number"
            android:textSize="18dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>



</LinearLayout>
    </layout>